# fretboard

./: .gitignore  Cargo.toml  README.md  dev.bragefuglseth.Fretboard.Devel.json  dev.bragefuglseth.Fretboard.Temp.json~  dev.bragefuglseth.Fretboard.json  fretboard.doap  meson.build  meson_options.txt  update-translations.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: chord-suggestion.md
.github/workflows/: ci.yml
build-aux/: dev.bragefuglseth.Fretboard.Devel.json
data/: chords.txt  dev.bragefuglseth.Fretboard.appdata.xml.in  dev.bragefuglseth.Fretboard.desktop.in  dev.bragefuglseth.Fretboard.desktop.in.in  dev.bragefuglseth.Fretboard.gschema.xml  dev.bragefuglseth.Fretboard.metainfo.xml.in  dev.bragefuglseth.Fretboard.metainfo.xml.in.in  dev.bragefuglseth.Fretboard.service.in  fretboard.gresource.xml.in  meson.build
data/gtk/: barre-spin.blp  chord-diagram-toggle.blp  chord-diagram.blp  chord-name-entry.blp  chord-preview.blp  help-overlay.blp  style-hc.css  style.css  window.blp
data/icons/: meson.build
data/resources/: dev.bragefuglseth.Fretboard.metainfo.xml  shortcuts-dialog.ui  style-hc-dark.css  style.css
data/resources/gtk/: help-overlay.ui
po/: LINGUAS  POTFILES  POTFILES.in  ar.po  az.po  be.po  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fretboard.pot  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kk.po  kw.po  meson.build  nb.po  nl.po  pt.po  pt_BR.po  ru.po  ru_RU.po  sl.po  sr.po  sv.po  te.po  (+5 more)
src/: application.rs  barre_spin.rs  chord_diagram.rs  chord_diagram_toggle.rs  chord_diagram_top_toggle.rs  chord_name_algorithm.rs  chord_name_entry.rs  chord_ops.rs  chord_preview.rs  chords.json  chords.rs  chords.txt  config.rs  config.rs.in  database.rs  fretboard.gresource.xml  main.rs  meson.build  window.rs
src/ui/: barre-spin.blp  barre-spin.ui  chord-diagram-toggle.ui  chord-diagram-top-toggle.ui  chord-diagram.ui  chord-name-entry.blp  chord-name-entry.ui  chord-preview.blp  chord-preview.ui  help-overlay.blp  style-dark.css  style-hc-dark.css  style-hc.css  style.css  window.blp  window.ui
src/widgets/: barre_spin.blp  barre_spin.rs  chord_diagram.blp  chord_diagram.rs  chord_diagram_toggle.blp  chord_diagram_toggle.rs  chord_diagram_top_toggle.blp  chord_diagram_top_toggle.rs  chord_name_entry.blp  chord_name_entry.rs  chord_preview.blp  chord_preview.rs  mod.rs  window.blp  window.rs
