[package]
name = "fretboard"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gvdb-macros = "0.1.12"
i18n-format = "0.2.0"
itertools = "0.11.0"
once_cell = "1.18.0"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_14", "blueprint"]

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_5"]
